# gstreamer-tutor

./: README.md  meson.build
src/application-development-basics/: 02_goption_interface.cpp  03_creating_gstelement.cpp  04_using_element_as_gobject.cpp  05_get_info_about_element.cpp  06_linking_elements.cpp  07_creating_a_bin.cpp  08_custom_bins.cpp  09_how_to_use_a_bus.cpp  10_dynamic_pads.cpp  README.md
src/basic-tutorial/: 01_hello_world.cpp  02_concepts.cpp  03_dynamic_pipelines.cpp  README.md
src/device-monitor/: device-monitor-sample.cpp
src/h264-rtpstreaming/: udpsink.cpp  udpsrc.cpp
src/multiple-camera/: multiple-camera.cpp
src/streaming/: X264Enc.hpp  bus.cpp  bus.hpp  clock.cpp  clock.hpp  streaming-receiver.cpp  streaming-sender.cpp  video-preview.cpp
